input, p5.js, buttom, footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/stylesheet.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lumanosimo&family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.js"></script>
     <title>Creative Code</title>
 </head>
 <body>
@@ -31,10 +32,15 @@
             "(Creative Coding) is a process, based on exploration, iteration, reflection and discovery, where code is used as the primary medium to create a wide range of media artifacts."
         </p>
         <p class="content__text">
-        But what exactly does creative coding mean? In my eyes, most definitions fail because they try to explain the term on the basis of a medium.
+        But what exactly does creative coding mean? In my eyes, most definitions fail because they try to explain the term on the basis of a medium. The entry on Wikipedia is a good example, because it directly lists examples of use, which strongly narrow the view of the reader and thus only allow a very limited view of the technology itself. To me it seems more useful to define the term more abstractly, as Mark C. Mitchell and Oliver Bown do.
         </p>
-        <div class="">
-            <img class="" src="" alt="">
+        <div class="processing" id="processing_stars" alt="processing">   
+        </div>
+        <div id="slider__processing-container">
+            
+          </div>
+        <div class="button__creatives" alt="button to creatives" role="button">
+          CREATIVES  
         </div>
     </div>
     <div >
@@ -42,11 +48,12 @@
     </div>
     <div class="footer">
         <ul class="footer__description-ul">
-            <li class="footer__description-li">AAA</li>
-            <li class="footer__description-li">BBB</li>
-            <li class="footer__description-li">CCC</li>
+            <li class="footer__description-li">Back to top</li>
+            <li class="footer__description-li">Profile</li>
+            <li class="footer__description-li">2023</li>
         </ul> 
         <p class="footer__contact">@umagranadodiaz</p>
     </div>
 </body>
+<script src="scipts/processing.js"></script>
 </html>
