more layout, vw+ problem solve, links

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Creative Code</title>
 </head>
 <body>
-    <div class="header">
-        <div class="header__title" alt=""><h2>Creative Code</h2><p class="header__title-sub">A little library</p></div>
+    <div class="header" id="header_top">
+        <div class="header__title"><h2 class="header__main-title">Creative Code</h2><h3 class="header__title-sub">A little library</h3></div>
         <img class="header__img" src="resources/img/img_creative_coding.png" alt="black and white dots">  
     </div>
     <div class="content">
@@ -43,12 +43,13 @@
     </div>
     <div class="footer">
         <ul class="footer__description-ul">
-            <li class="footer__description-li">Back to top</li>
-            <li class="footer__description-li">Profile</li>
+            <li class="footer__description-li"><a href="#header_top">Back to top</a></li>
+            <li class="footer__description-li"><a href="https://github.com/Umagdiaz">Profile</a></li>
             <li class="footer__description-li">2023</li>
         </ul> 
-        <p class="footer__contact">@umagranadodiaz</p>
+        <p class="footer__contact"><a href="https://www.instagram.com/umagranadodiaz/">@umagranadodiaz</a></p>
     </div>
 </body>
 <script src="scipts/processing.js"></script>
+<script src="scipts/scipts.js"></script> 
 </html>
