new pages, new stylesheet

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <div id="slider__processing-container">  
         </div>
         <div class="button__creatives" alt="button to creatives" role="button">
-          CREATIVES  
+          <a class="a__buttom" href="creatives_cards.html">CREATIVES</a> 
         </div>
     </div>
     <div class="footer">
         <ul class="footer__description-ul">
-            <li class="footer__description-li"><a href="#header_top">Back to top</a></li>
-            <li class="footer__description-li"><a href="https://github.com/Umagdiaz">Profile</a></li>
+            <li class="footer__description-li"><a class="a__footer" href="#header_top">Back to top</a></li>
+            <li class="footer__description-li"><a class="a__footer" href="https://github.com/Umagdiaz">Profile</aa__buttom></li>
             <li class="footer__description-li">2023</li>
         </ul> 
         <p class="footer__contact"><a href="https://www.instagram.com/umagranadodiaz/">@umagranadodiaz</a></p>
