new dir in sources, img, bio, header/footer in creative page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li class="footer__description-li"><a class="a__footer" href="https://github.com/Umagdiaz">Profile</aa__buttom></li>
             <li class="footer__description-li">2023</li>
         </ul> 
-        <p class="footer__contact"><a href="https://www.instagram.com/umagranadodiaz/">@umagranadodiaz</a></p>
+        <p class="footer__contact"><a class="footer__contact-a" href="https://www.instagram.com/umagranadodiaz/">@umagranadodiaz</a></p>
     </div>
 </body>
 <script src="scipts/processing.js"></script>
