--- a/creatives_cards.html
+++ b/creatives_cards.html
@@ -7,7 +7,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="navbar">
+        <p>BACK</p>
+    </div>
+    <div class="container__cads">
+        <div ></div>
+        <div class="card card__creative-1"></div>
+        <div class="card card__creative-2"></div>
+        <div class="card card__creative-3"></div>
+        <div class="card card__creative-4"></div>
+        <div class="card card__creative-5"></div>
+        <div class="card card__creative-6"></div>
+        <div class="card card__creative-7"></div>
+        <div class="card card__creative-8"></div>
+        <div class="card card__creative-9"></div> 
+    </div>
+    <div class="footer">
+        <ul class="footer__description-ul">
+            <li class="footer__description-li"><a class="a__footer" href="#header_top">Back to top</a></li>
+            <li class="footer__description-li"><a class="a__footer" href="https://github.com/Umagdiaz">Profile</aa__buttom></li>
+            <li class="footer__description-li">2023</li>
+        </ul> 
+        <p class="footer__contact"><a class="footer__contact-a" href="https://www.instagram.com/umagranadodiaz/">@umagranadodiaz</a></p>
+    </div>
 </body>
 <script src="scipts/scipts.js"></script> 
 </html>
