--- a/creatives_cards.html
+++ b/creatives_cards.html
@@ -11,11 +11,30 @@
         <a class="a__buttom" href="index.html">BACK</a>
     </div>
     <div class="container__cards">
+        <div class="cards card__creative-1">
+            <div class="card__creative-head">
+                <h3 class="name__card">Manfred Mohr</h3>
+                <p class="country__card">Germany</p>
+            </div>
+            <div class="card__creative-body">
+                <div class="card__creative-bio">
+                    <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis iste nihil, quasi ipsum eius quidem error similique modi adipisci repellat ex voluptate praesentium? Magni odit exercitationem molestiae alias officiis velit.
+                    </p>
+                </div> 
+                <div class="card__creative-img">
+                    <img class="card__img-flip" src="/resources/img/manfred_mohr.webp" alt="">
+                </div>
+            </div>
+            <div class="card__icon-flip">
+                <img src="/resources/icons/arrow_flip_m.png" alt="Icon Clicable" class="clickable-icon" >
+            </div>       
+        </div>  
 
         <div class="cards card__creative-1">
             <div class="card__creative-head">
-                <h3 class="name__card">Name</h3>
-                <p class="country__card">Country</p>
+                <h3 class="name__card">Auro Lecci</h3>
+                <p class="country__card">Italy</p>
             </div>
             <div class="card__creative-body">
                 <div class="card__creative-bio">
@@ -32,6 +51,85 @@
             </div>       
         </div>  
 
+        <div class="cards card__creative-1">
+            <div class="card__creative-head">
+                <h3 class="name__card">Paul Ferragut</h3>
+                <p class="country__card">France</p>
+            </div>
+            <div class="card__creative-body">
+                <div class="card__creative-bio">
+                    <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis iste nihil, quasi ipsum eius quidem error similique modi adipisci repellat ex voluptate praesentium? Magni odit exercitationem molestiae alias officiis velit.
+                    </p>
+                </div> 
+                <div class="card__creative-img">
+                    <img class="card__img-flip" src="/resources/img/Paul_Ferragut_work.jpg" alt="">
+                </div>
+            </div>
+            <div class="card__icon-flip">
+                <img src="/resources/icons/arrow_flip_m.png" alt="Icon Clicable" class="clickable-icon" >
+            </div>       
+        </div>  
+
+        <div class="cards card__creative-1">
+            <div class="card__creative-head">
+                <h3 class="name__card">Bruno Imbrizi</h3>
+                <p class="country__card">Brazil</p>
+            </div>
+            <div class="card__creative-body">
+                <div class="card__creative-bio">
+                    <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis iste nihil, quasi ipsum eius quidem error similique modi adipisci repellat ex voluptate praesentium? Magni odit exercitationem molestiae alias officiis velit.
+                    </p>
+                </div> 
+                <div class="card__creative-img">
+                    <img class="card__img-flip" src="/resources/img/Bruno_Imbrizi_art.webp" alt="">
+                </div>
+            </div>
+            <div class="card__icon-flip">
+                <img src="/resources/icons/arrow_flip_m.png" alt="Icon Clicable" class="clickable-icon" >
+            </div>       
+        </div>  
+
+        <div class="cards card__creative-1">
+            <div class="card__creative-head">
+                <h3 class="name__card">Julien Gachadoat</h3>
+                <p class="country__card">France</p>
+            </div>
+            <div class="card__creative-body">
+                <div class="card__creative-bio">
+                    <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis iste nihil, quasi ipsum eius quidem error similique modi adipisci repellat ex voluptate praesentium? Magni odit exercitationem molestiae alias officiis velit.
+                    </p>
+                </div> 
+                <div class="card__creative-img">
+                    <img class="card__img-flip" src="/resources/img/Julien_godochard_work.png" alt="">
+                </div>
+            </div>
+            <div class="card__icon-flip">
+                <img src="/resources/icons/arrow_flip_m.png" alt="Icon Clicable" class="clickable-icon" >
+            </div>       
+        </div>  
+
+        <div class="cards card__creative-1">
+            <div class="card__creative-head">
+                <h3 class="name__card">Edward Zajec</h3>
+                <p class="country__card">Italy</p>
+            </div>
+            <div class="card__creative-body">
+                <div class="card__creative-bio">
+                    <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis iste nihil, quasi ipsum eius quidem error similique modi adipisci repellat ex voluptate praesentium? Magni odit exercitationem molestiae alias officiis velit.
+                    </p>
+                </div> 
+                <div class="card__creative-img">
+                    <img class="card__img-flip" src="/resources/img/edward_Zajac.jpg" alt="">
+                </div>
+            </div>
+            <div class="card__icon-flip">
+                <img src="/resources/icons/arrow_flip_m.png" alt="Icon Clicable" class="clickable-icon" >
+            </div>       
+        </div>  
     </div>
 
     <div class="footer">
