--- a/creatives_cards.html
+++ b/creatives_cards.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/creative_cards_stylesheet.css">
+    <link rel="stylesheet" href="styles/creative_cards_tablet.css" media="screen and (min-width: 768px)">
+    <link rel="stylesheet" href="styles/creative_cards_desktop.css" media="screen and (min-width: 1204px)">
     <title>Document</title>
 </head>
 <body>
