--- a/creatives_cards.html
+++ b/creatives_cards.html
@@ -21,7 +21,12 @@
             <div class="card__creative-body">
                 <div class="card__creative-bio">
                     <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis iste nihil, quasi ipsum eius quidem error similique modi adipisci repellat ex voluptate praesentium? Magni odit exercitationem molestiae alias officiis velit.
+                        Mohr started his career as an action painter and jazz musician. He began using a computer in 1969 because of a growing interest in creating algorithmic art.
+                    </p>
+                    <p>
+                        His early computer works are algorithmic and based on his former drawings with a strong attitude on rhythm and repetition. 
+                    In 1990 he was awarded the Prix Ars Electronica (Golden Nica) at Ars Electronica festival in Linz, Austria. 
+                    He maintained an art studio in Paris from 1963 to 1983. Mohr attended Kunst + Werkschule in Pforzheim and École des Beaux-Arts in Paris.
                     </p>
                 </div> 
                 <div class="card__creative-img">
@@ -41,7 +46,8 @@
             <div class="card__creative-body">
                 <div class="card__creative-bio">
                     <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis iste nihil, quasi ipsum eius quidem error similique modi adipisci repellat ex voluptate praesentium? Magni odit exercitationem molestiae alias officiis velit.
+                        Auro Lecci began his computer graphic works at the data center of the University of Pisa (Italy) and later continued at the 
+                    Department of Art of the University of Massachusettes, Amherst, MA (USA).
                     </p>
                 </div> 
                 <div class="card__creative-img">
@@ -61,7 +67,11 @@
             <div class="card__creative-body">
                 <div class="card__creative-bio">
                     <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis iste nihil, quasi ipsum eius quidem error similique modi adipisci repellat ex voluptate praesentium? Magni odit exercitationem molestiae alias officiis velit.
+                        A new media artist and creative technologist exploring digital art through interactive installations.
+                    </p>
+                    <p>
+                        My area of research is creative coding, physical interaction, the humanization of technology, and 
+                    collaborations with other artistic disciplines.
                     </p>
                 </div> 
                 <div class="card__creative-img">
@@ -81,7 +91,12 @@
             <div class="card__creative-body">
                 <div class="card__creative-bio">
                     <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis iste nihil, quasi ipsum eius quidem error similique modi adipisci repellat ex voluptate praesentium? Magni odit exercitationem molestiae alias officiis velit.
+                        Working with creative coding for over a decade, creating websites, online experiences, 
+                    design systems and installations for some well known brands like Dell, Adidas and Universal Music.
+                    </p>
+                    <p>
+                        Some of my projects were made with C++ (OpenFrameworks) or Python (TouchDesigner), but my focus has been on 
+                    web technologies using JavaScript and WebGL. 
                     </p>
                 </div> 
                 <div class="card__creative-img">
@@ -101,7 +116,15 @@
             <div class="card__creative-body">
                 <div class="card__creative-bio">
                     <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis iste nihil, quasi ipsum eius quidem error similique modi adipisci repellat ex voluptate praesentium? Magni odit exercitationem molestiae alias officiis velit.
+                        Has been exploring generative drawing for many years, creating unique art with algorithms.
+                    </p>
+                    <p>
+                        He works with the emergence of abstract form, combining monochrome, geometric shapes, playing with 
+                    repetition and using random operations to generate an element of surprise.  
+                    </p>
+                    <p>
+                        He has been exhibiting his work in Bordeaux (Galerie Métavilla) in Paris (Galerie Binôme), 
+                    in Bayonne (DIDAM, Contemporary Art Space), in Berlin and in Venezia (Biennale).
                     </p>
                 </div> 
                 <div class="card__creative-img">
@@ -121,7 +144,8 @@
             <div class="card__creative-body">
                 <div class="card__creative-bio">
                     <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis iste nihil, quasi ipsum eius quidem error similique modi adipisci repellat ex voluptate praesentium? Magni odit exercitationem molestiae alias officiis velit.
+                        Edward Zajec had started working with computers in 1968 while teaching Fine art at Carleton College in Northfield, Minnesota. His use of computers has focussed on eliciting patterns based on redundancy and repeatition. He has been 
+                    engaged in computer graphics, experimental animation and internet projects in the recent past.
                     </p>
                 </div> 
                 <div class="card__creative-img">
